Fix: footer display error on small screen

--- a/npm/src/style/part/_scaffold.scss
+++ b/npm/src/style/part/_scaffold.scss
@@ -29,7 +29,6 @@ main {
 }
 
 footer {
-    height: 5rem;
     background-color: blogTheme.$top-bar-color-darken;
     color: blogTheme.$footer-ink-color;
     display: flex;
